# penn-neurips2022

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml
data/ad/: penn.yml  wo_boundary_condition_in_nns.yml  wo_boundary_condition_input.yml  wo_dirichlet_layer.yml  wo_encoded_boundary.yml  wo_neural_nonlinear_solver.yml  wo_pseudoinverse_decoder.yml  wo_pseudoinverse_decoder_w_dirichlet_layer_after_decoding.yml
data/fluid/: data.yml  penn_n16_rep4.yml  penn_n16_rep8.yml  penn_n4_rep4.yml  penn_n4_rep8.yml  penn_n8_rep4.yml  penn_n8_rep8.yml  wo_boundary_condition_in_nns.yml  wo_boundary_condition_input.yml  wo_dirichlet_layer.yml  wo_encoded_boundary.yml  wo_neural_nonlinear_solver.yml  wo_pseudoinverse_decoder.yml  wo_pseudoinverse_decoder_w_dirichlet_layer_after_decoding.yml
data/grad/: data.yml  isogcn.yml  neumannisogcn.yml
src/: analyse_error_openfoam.py  convert_interim_data.py  deploy_models.py  eval.py  generate_grad.py  generate_vtu.py  preprocess_interim_data.py  stats.py  train.py  transform_data.py  validate_equivariance.py
tests/data/advection_diffusion/: penn.yml
tests/data/advection_diffusion/interim/u0.5_d0.5_t0.5/: time_with_adj.txt  time_without_adj.txt
tests/data/advection_diffusion/interim/u0.5_d0.5_t0.6/: time_with_adj.txt  time_without_adj.txt
tests/data/advection_diffusion/interim/u0.5_d0.6_t0.5/: time_with_adj.txt  time_without_adj.txt
tests/data/advection_diffusion/preprocessed/: preprocessors.pkl
tests/data/fluid/: penn.yml
tests/data/fluid/preprocessed/: preprocessors.pkl
(+451 files in other folders)
